:sparkles: Done with header

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="nav-links">
             <a href="">
-                <i class="material-icons-outlined">flutter_dash</i>
+                <i class="material-icons-outlined">face</i>
             </a>
             <a href="">
                 <i class="material-icons-outlined">home</i>
@@ -49,6 +49,19 @@
                 <span>More</span>
             </a>
             <button class="tweet-button">Tweet</button>
+        </div>
+        <div class="main-account">
+            <a href="">
+                <img src="images/profile1.jpg" alt="" class="account-image">
+                <div class="account-details">
+                    <span class="account-name">Tarik Waleed</span>
+                    <span class="account-handle">@tarikwaleed</span>
+                </div>
+                <i class="material-icons-outlined">
+                    more_horiz
+                    
+                </i>
+            </a>
         </div>
     </header>
 
