:sparkles: Home Bar

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Twitter</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="header-styles.css">
+    <link rel="stylesheet" href="main-feed-styles.css">
 </head>
 
 <body>
@@ -59,11 +60,27 @@
                 </div>
                 <i class="material-icons-outlined">
                     more_horiz
-                    
+
                 </i>
             </a>
         </div>
     </header>
+    <main>
+        <div class="main-flex">
+            <div class="main-feed">
+                <div class="home-bar">
+                    <span>Home</span>
+                    <i class="material-icons-outlined">
+                        auto_awesome
+                    </i>
+                </div>
+            </div>
+            <div class="side-feed">
+
+            </div>
+
+        </div>
+    </main>
 
 </body>
 
