:sparkles: New Tweet section

--- a/index.html
+++ b/index.html
@@ -74,12 +74,45 @@
                         auto_awesome
                     </i>
                 </div>
+                <div class="new-tweet">
+                    <img class="account-image" src="images/profile1.jpg" alt="">
+                    <div class="new-tweet-details">
+                        <input type="text" placeholder="What's happening?">
+                        <div class="new-tweet-actions">
+                            <ul>
+                                <li>
+                                    <i class="material-icons-outlined">
+                                        image
+                                    </i>
+                                </li>
+                                <li>
+                                    <i class="material-icons-outlined">
+                                        gif_box
+                                    </i>
+                                </li>
+                                <li>
+                                    <i class="material-icons-outlined">
+                                        poll
+                                    </i>
+                                </li>
+                                <li>
+                                    <i class="material-icons-outlined">
+                                        sentiment_satisfied
+                                    </i>
+                                </li>
+                                <li>
+                                    <i class="material-icons-outlined">
+                                        event
+                                    </i>
+                                </li>
+                            </ul>
+                            <button class="tweet-button">Tweet</button>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="side-feed">
-
-            </div>
-
         </div>
+
     </main>
 
 </body>
