:construction: just html for feed-tweet

--- a/index.html
+++ b/index.html
@@ -110,6 +110,41 @@
                         </div>
                     </div>
                 </div>
+                <div class="feed-tweet">
+                    <img class="account-image" src="images/profile1.jpg" alt="">
+                    <div class="feed-tweet-details">
+                        <div class="tweeter-details">
+                            <a href="" class="tweeter-name">
+                                <span>Tarik Waleed</span>
+                                <span class="tweeter-handle">
+                                    @tarikwaleed
+
+                                </span>
+                            </a>
+                            <i class="material-icons-outlined">
+                                more_horiz
+                            </i>
+                        </div>
+                        <div class="tweet-text">
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo dolor labore odio cum quo culpa molestias, molestiae autem suscipit, impedit fuga sunt ullam inventore perspiciatis itaque placeat, nemo in cupiditate?</p>
+                        </div>
+                        <div class="tweet-icons">
+                            <i class="material-icons-outlined">
+                                chat_bubble_outline
+                            </i>
+                            <i class="material-icons-outlined">
+                                restart_alt
+                            </i>
+                            <i class="material-icons-outlined">
+                                favorite_border
+                            </i>
+                            <i class="material-icons-outlined">
+                                upload
+                            </i>
+
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
