:construction: lots of changes

--- a/index.html
+++ b/index.html
@@ -486,6 +486,15 @@
                 </div>
 
             </div>
+            <div class="side-feed">
+                <div class="search">
+                    <input type="text" placeholder="Search Twitter">
+                </div>
+                <div class="trending">
+
+                </div>
+
+            </div>
         </div>
 
     </main>
