:sparkles: Done with Trending section in the side-feed

--- a/index.html
+++ b/index.html
@@ -491,6 +491,53 @@
                     <input type="text" placeholder="Search Twitter">
                 </div>
                 <div class="trending">
+                    <h1 class="trending-title">
+                        What's Happening?
+                    </h1>
+                    <div class="trending-item">
+                        <div class="item-category">
+                            <span>Trending in Egypt</span>
+                            <i class="material-icons-outlined">
+                                more_horiz
+                            </i>
+                        </div>
+                        <p>#iti_news</p>
+                        <span>10k Tweets</span>
+                    </div>
+                    <div class="trending-item">
+                        <div class="item-category">
+                            <span>Trending in Egypt</span>
+                            <i class="material-icons-outlined">
+                                more_horiz
+                            </i>
+                        </div>
+                        <p>#iti_news</p>
+                        <span>10k Tweets</span>
+                    </div>
+                    <div class="trending-item">
+                        <div class="item-category">
+                            <span>Trending in Egypt</span>
+                            <i class="material-icons-outlined">
+                                more_horiz
+                            </i>
+                        </div>
+                        <p>#iti_news</p>
+                        <span>10k Tweets</span>
+                    </div>
+                    <div class="trending-item">
+                        <div class="item-category">
+                            <span>Trending in Egypt</span>
+                            <i class="material-icons-outlined">
+                                more_horiz
+                            </i>
+                        </div>
+                        <p>#iti_news</p>
+                        <span>10k Tweets</span>
+                    </div>
+
+                    <a href="" class="show-more">
+                        Show more
+                    </a>
 
                 </div>
 
