:sparkles: Almost Done with the project

--- a/index.html
+++ b/index.html
@@ -514,32 +514,37 @@
                         <p>#iti_news</p>
                         <span>10k Tweets</span>
                     </div>
-                    <div class="trending-item">
-                        <div class="item-category">
-                            <span>Trending in Egypt</span>
-                            <i class="material-icons-outlined">
-                                more_horiz
-                            </i>
-                        </div>
-                        <p>#iti_news</p>
-                        <span>10k Tweets</span>
-                    </div>
-                    <div class="trending-item">
-                        <div class="item-category">
-                            <span>Trending in Egypt</span>
-                            <i class="material-icons-outlined">
-                                more_horiz
-                            </i>
-                        </div>
-                        <p>#iti_news</p>
-                        <span>10k Tweets</span>
-                    </div>
 
                     <a href="" class="show-more">
                         Show more
                     </a>
 
                 </div>
+                <div class="follow-section">
+                    <h1 class="trending-title">
+                        Who to follow
+                    </h1>
+                    <div class="follow-profile">
+                        <img src="images/profile1.jpg" alt="" class="account-image">
+                        <div class="follow-details">
+                            <a href="">Tarik Waleed</a>
+                            <span>@tarikwaleed <span id="follows">follows you</span></span>
+                        </div>
+                        <button class="follow-button">Follow</button>
+                    </div>
+                    <div class="follow-profile">
+                        <img src="images/profile1.jpg" alt="" class="account-image">
+                        <div class="follow-details">
+                            <a href="">Tarik Waleed</a>
+                            <span>@tarikwaleed <span id="follows">follows you</span></span>
+                        </div>
+                        <button class="follow-button">Follow</button>
+                    </div>
+                    <a href="" class="show-more">
+                        Show more
+                    </a>
+                </div>
+
 
             </div>
         </div>
